[Fixes #26800005] Searchers on oneserp site with custom header/footer should see sufficient spacing on search results
- Added margin above the search results

--- a/app/stylesheets/affiliates/one_serp.sass
+++ b/app/stylesheets/affiliates/one_serp.sass
@@ -32,8 +32,10 @@ body
 .with-content-border #container
   +border-radius(8px)
 
-#header.managed
-  margin-bottom: 30px
+#header
+  margin-bottom: 10px
+  &.managed
+    margin-bottom: 30px
 
 #managed_header
   +clearfix
